<resources>
    <string name="app_name">ARSquareTracking</string>
    <string name="activity_name">ARSquareTrackingActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_login">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_remember_me">Remember me</string>
    <string name="action_sign_in_forgot_password">Forgot password?</string>
    <string name="action_sign_in_new_member">New member?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="drawer_header_title">Menu</string>
    <string name="drawer_list_item_map">Map</string>
    <string name="drawer_list_item_graph">Graph activity</string>
    <string name="drawer_list_item_menu">Menu activity</string>
</resources>
