<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_08"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_07"
            >


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginLeft="52dp"
                android:layout_gravity="center|start">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"
                    android:text="@string/title_activity_login"
                    android:textSize="13sp"
                    android:textColor="@color/color_03"/>
            </FrameLayout>


        </android.support.design.widget.AppBarLayout>
    </FrameLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="47dp"
                    android:text="@string/prompt_email"
                    android:textColor="@color/color_03"
                    android:textSize="13sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center"
                        android:background="@drawable/ic_check" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_10"></FrameLayout>

                    </android.support.design.widget.TextInputLayout>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/prompt_password"
                    android:textColor="@color/color_03"
                    android:textSize="13sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center"
                        android:background="@drawable/ic_check"
                        android:visibility="invisible" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_11"></FrameLayout>

                    </android.support.design.widget.TextInputLayout>
                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center|start"
                        android:background="@drawable/btn_remember_me"></FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:layout_gravity="start|center"
                            android:layout_marginLeft="6dp"
                            android:text="@string/action_sign_in_remember_me"
                            android:textColor="@color/color_03"
                            android:textSize="11sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:layout_gravity="end|center"
                            android:layout_marginLeft="6dp"
                            android:text="@string/action_sign_in_forgot_password"
                            android:textColor="@color/color_10"
                            android:textSize="11sp" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="39dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:layout_marginRight="27dp"
                        android:background="@drawable/btn_corner2"
                        android:text="@string/action_sign_in_login"
                        android:textColor="@color/color_03"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/action_sign_in_new_member"
                        android:textColor="@color/color_03"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/action_sign_up"
                        android:textColor="@color/color_10"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>