<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="missingPrefix"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_02"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:paddingTop="33dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginLeft="24dp"
            android:text="@string/drawer_header_title"
            android:textSize="15sp"
            android:textColor="@color/color_03"/>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/nav_item_01"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:paddingLeft="19dp">

        <FrameLayout
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_map"/>
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/ic_map"/>-->
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:text="@string/drawer_list_item_map"
            style="@style/drawer_list_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_item_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="19dp">

        <FrameLayout
            android:layout_width="74dp"
            android:layout_height="24dp"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_graph_activity"/>
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_graph_activity"/>-->
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:text="@string/drawer_list_item_graph"
            style="@style/drawer_list_item" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_item_03"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:paddingLeft="19dp">

        <FrameLayout
            android:layout_width="74dp"
            android:layout_height="24dp"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_menuactivity"/>
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_menuactivity"/>-->
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:text="@string/drawer_list_item_menu"
            style="@style/drawer_list_item" />

    </LinearLayout>
</LinearLayout>